--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -3,10 +3,10 @@
 ```let``` ```match``` ```method``` ```associated function``` ```external crate```
 <br><br>
 # Guessing game
-1️⃣ 1~100 random integer generated<br>
-2️⃣ input the integer guessed by a player on the program<br>
-3️⃣ show whether the guessed number is higher/lower than the ans<br>
-4️⃣ correct → congrats msg & exit<br><br>
+```0️.``` 1~100 random integer generated<br>
+```1️.``` input the integer guessed by a player on the program<br>
+```2️.``` show whether the guessed number is higher/lower than the ans<br>
+```3️.``` correct → congrats msg & exit<br><br>
 
 ## new project prep
 <pre>
@@ -16,8 +16,9 @@ $ cd guessing_game
 </pre><br>
 <pre>$ vi Cargo.toml</pre>
 * former setting<br>
-  <img src="https://github.com/redzzzi/rust23summer/assets/127263392/1e622d84-af51-46ee-96de-f35cec95ab13" width="600px"><br><br>
+  <img src="https://github.com/redzzzi/rust23summer/assets/127263392/788235cd-cb82-449f-b896-079cd9cef519" width="600px"><br><br>
 * edit author setting<br><br>
+
   <code>authors = ["Your Name <you@example.com>"]</code><br><br>
 ## process the guessed
 <pre>vi src/main.rs</pre><br>
