--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -3,10 +3,10 @@
 ```let``` ```match``` ```method``` ```associated function``` ```external crate```
 <br><br>
 # Guessing game
-```0️.``` 1~100 random integer generated<br>
-```1️.``` input the integer guessed by a player on the program<br>
-```2️.``` show whether the guessed number is higher/lower than the ans<br>
-```3️.``` correct → congrats msg & exit<br><br>
+0️⃣ 1~100 random integer generated<br>
+1️⃣ input the integer guessed by a player on the program<br>
+2️⃣ show whether the guessed number is higher/lower than the ans<br>
+3️⃣ correct → congrats msg & exit<br><br>
 
 ## new project prep
 <pre>
