--- a/06열거형과패턴매칭.md
+++ b/06열거형과패턴매칭.md
@@ -1,1 +1,11 @@
+# 📜 06 Enums and Pattern Matching
+[열거형 정의](#1-열거형-정의하기)&emsp;[match](#2-match-흐름-제어-연산자)&emsp;[if let 흐름 제어](#3-if-let을-사용한-간결한-흐름-제어)
+<br><br>
 
+## 1. 열거형 정의하기
+<br><br>
+
+## 2. match 흐름 제어 연산자
+<br><br>
+
+## 3. if let을 사용한 간결한 흐름 제어
