--- a/05연관데이터구조체로다루기.md
+++ b/05연관데이터구조체로다루기.md
@@ -1,11 +1,11 @@
-# 📜 Using Structs to Structure Related Data
-[구조체 정의•생성](#구조체를-정의하고-생성하기)&emsp;[구조체 이용 예제](#구조체를-정의하고-생성하기)&emsp;[메소드 문법](#메소드-문법)
+# 📜 05 Using Structs to Structure Related Data
+[구조체 정의•생성](#1-구조체를-정의하고-생성하기)&emsp;[구조체 이용 예제](#2-구조체를-이용한-예제-프로그램)&emsp;[메소드 문법](#3-메소드-문법)
 <br><br>
 
-## 구조체를 정의하고 생성하기
+## 1. 구조체를 정의하고 생성하기
 <br><br>
 
-## 구조체를 이용한 예제 프로그램
+## 2. 구조체를 이용한 예제 프로그램
 <br><br>
 
-## 메소드 문법
+## 3. 메소드 문법
