--- a/07모듈.md
+++ b/07모듈.md
@@ -1,1 +1,11 @@
+# 📜 07 Managing Growing Projects with Packages, Crates, and Modules
+[mod와 파일 시스템](#1-mod와-파일-시스템)&emsp;[pub](#2-pub으로-가시성-제어하기)&emsp;[use](#3-use로-이름-가져오기)
+<br><br>
 
+## 1. mod와 파일 시스템
+<br><br>
+
+## 2. pub으로 가시성 제어하기
+<br><br>
+
+## 3. use로 이름 가져오기
