--- a/05연관데이터구조체로다루기.md
+++ b/05연관데이터구조체로다루기.md
@@ -2,7 +2,25 @@
 [구조체 정의•생성](#1-구조체를-정의하고-생성하기)&emsp;[구조체 이용 예제](#2-구조체를-이용한-예제-프로그램)&emsp;[메소드 문법](#3-메소드-문법)
 <br><br>
 
+## 구조체가 뭐냐!?!!
+[또언어 구조체..와 비교...!](https://studyc.tistory.com/23)
+* 사용자가 여러 값을 묶어서 **유의미한** 데이터 단위를 정의하도록 하는 것❗
+
 ## 1. 구조체를 정의하고 생성하기
+```rust
+struct User {
+  username: String,
+  email: String,
+  sign_in_count: u64,
+  active: bool,
+}
+```
+* 구조체를 정의하려면 당연히! ```struct```를 먼저 입력해놔야하고, 위의 User와같은 구조체명을 입력
+* 중괄호 내의 구성요소는 *field*라 불리며, 타입과 접근 가능한 이름이 정의되어야 함
+* 정의를 하고 나서 사용하려면? ➡️ field 값 명세한 instance 생성
+  * instance는 ```key:value``` 쌍을 중괄호 내에 추가하여 생성 가능
+  * instance 사용은 구조체 이름 명시한 것부터 사용 가능한 거라고 보면 됨
+
 <br><br>
 
 ## 2. 구조체를 이용한 예제 프로그램
