--- a/rustlang/03프로그래밍개념.md
+++ b/rustlang/03프로그래밍개념.md
@@ -79,7 +79,7 @@ C-->I(배열)
 ## 정수형
 * 소수점이 없는 숫자
   
-* 부호: 숫자가 부호를 가져야 하는 경우 / 미부호: 양수만을 가지기에 부호없이도 표현되는 경우
+* 부호(i): 숫자가 부호를 가져야 하는 경우 / 미부호(u): 양수만을 가지기에 부호없이도 표현되는 경우
   * 부호된 숫자는 [2의 보수](https://ko.wikipedia.org/wiki/2%EC%9D%98_%EB%B3%B4%EC%88%98) 형태로 저장.
   
 * Rust에서의 정수 타입
