--- a/05연관데이터구조체로다루기.md
+++ b/05연관데이터구조체로다루기.md
@@ -7,7 +7,9 @@
 * 사용자가 여러 값을 묶어서 **유의미한** 데이터 단위를 정의하도록 하는 것❗
 
 ## 1. 구조체를 정의하고 생성하기
+### 구조체 정의
 ```rust
+// 사용자 계정 정보 저장하는 User 구조체 정의
 struct User {
   username: String,
   email: String,
@@ -17,11 +19,134 @@ struct User {
 ```
 * 구조체를 정의하려면 당연히! ```struct```를 먼저 입력해놔야하고, 위의 User와같은 구조체명을 입력
 * 중괄호 내의 구성요소는 *field*라 불리며, 타입과 접근 가능한 이름이 정의되어야 함
-* 정의를 하고 나서 사용하려면? ➡️ field 값 명세한 instance 생성
+* 정의를 하고 나서 사용하려면? ➡️ instance(각 필드의 값을 명세한 것) 생성
   * instance는 ```key:value``` 쌍을 중괄호 내에 추가하여 생성 가능
   * instance 사용은 구조체 이름 명시한 것부터 사용 가능한 거라고 보면 됨
+<br>
+
+### 구조체 인스턴스 생성
+* 구조체 정의: 들어가는 내용의 대략적인 양식
+* 인스턴스: 그것에 특정한 값을 넣어 실체화한 것
+  * 인스턴스는 반드시 ```변경 가능``` 해야
+<details>
+<summary>구조체 <code>User</code> 인스턴스 생성</summary>
+<div markdown="1">
+  
+```rust
+// 특정 사용자 선언
+let user1 = User {
+    email: String::from("someone@example.com"),
+    username: String::from("someusername123"),
+    active: true,
+    sign_in_count: 1,
+};
+
+```
+
+</details>
+<details>
+<summary><code>User</code> 인스턴스의 <code>email</code> 필드 변경</summary>
+<div markdown="1">
+
+```rust
+ let mut user1 = User {
+    email: String::from("someone@example.com"),
+    username: String::from("someusername123"),
+    active: true,
+    sign_in_count: 1,
+};
+
+user1.email = String::from("anotheremail@example.com");
+```
+* ```점(.) 표기법```을 사용하여 특정 필드에 새 값 할당 가능
+* Rust에서는 특정 필드만 변경 불가
+* 함수 본문 마지막에 새 인스턴스 구조체를 표현식으로 생성하여 새 인스턴스 반환
+
+</details>
+<details>
+<summary>사용자의 이메일과 이름을 받아 <code>User</code> 구조체의 인스턴스를 반환하는 <code>build_user</code> 함수</summary>
+<div markdown="1">
+
+```rust
+fn build_user(email: String, username: String) -> User {
+    User {
+        email: email,
+        username: username,
+        active: true,
+        sign_in_count: 1,
+    }
+}
+```
+* active는 ```bool``` 타입의 필드. 사용자 활성 상태를 나타내는 듯..?
+  
+</details>
+<br>
+
+* ```User``` 구조체 사용해서 user1이라는 사용자를 생성
+* ```build_user``` 함수 호출하여 새로운 ```User``` 인스턴스 생성
 
 <br><br>
+
+### 필드 초기화 축약법*field init shorthand*
+```rust
+fn build_user(email: String, username: String) -> User {
+    User {
+        email,
+        username,
+        active: true,
+        sign_in_count: 1,
+    }
+}
+```
+* 위 build_user 함수와 똑같이 동작
+* 매개변수(email, username)가 ```User``` 구조체 필드명과 동일 → 변수 명시 부분 생략 가능.
+<br><br>
+### 구조체 갱신법*struct update syntax*
+* ⬆️을 이용하여 기존 값을 기반으로 새 구조체 인스턴스 생성❗
+```rust
+let user2 = User {
+    email: String::from("another@example.com"), // 새로 할당
+    username: String::from("anotherusername567"), // 새로 할당
+    active: user1.active, // user1 값 그대로
+    sign_in_count: user1.sign_in_count, // user1 값 그대로
+};
+```
+* ```..구문```을 사용하여 위와 같은 효과를 내는 코드
+```rust
+// 인스턴스 갱신 문법 사용 예시
+let user2 = User {
+    email: String::from("another@example.com"),
+    username: String::from("anotherusername567"),
+    ..user1
+};
+```
+<br><br>
+### 튜플 구조체*tuple struct*
+* 필드의 타입만 정의 가능하고 명명은 불가한 구조체 (구조체명으로 의미 부여 가능)
+* 1️⃣```struct``` 키워드 2️⃣튜플 타입 정의만 이루어지면 됨❣️
+<details>
+<summary>예시</summary>
+<div markdown="1">
+
+```rust
+struct Color(i32, i32, i32);
+struct Point(i32, i32, i32);
+
+let black = Color(0, 0, 0);
+let origin = Point(0, 0, 0);
+```
+* 구조체 내의 타입은 동일하지만 ```black```, ```origin``` 각각은 고유의 타입임
+</details>
+
+<br><br>
+### 유사 유닛 구조체*unit-like struct*
+* 필드가 없음
+* [유닛 타입](https://runebook.dev/ko/docs/rust/std/primitive.unit)```()```과 비슷하게 동작.
+* 특정한 타입의 trait 구현 요구됨
+<br><br>
+### 구조체 테이터의 <code>소유권</code>
+* [```User``` 구조체 정의](#구조체-정의)에서 ```&str```타입 대신 ```String```타입 사용한 이유는 **전체 구조체가 유효한 동안 구조체가 그 데이터를 소유하도록 하기 위해서**임
+* [라이프타임](https://rinthel.github.io/rust-lang-book-ko/ch10-03-lifetime-syntax.html) 사용 전제 시, 구조체가 소유권이 없는 데이터의 참조를 저장할 수 있음 ← 이 내용 잘 모르니까 ```String``` 사용으로 ```&str```사용시의 에러 고치는 것임❗
 
 ## 2. 구조체를 이용한 예제 프로그램
 <br><br>
