--- a/05연관데이터구조체로다루기.md
+++ b/05연관데이터구조체로다루기.md
@@ -150,6 +150,77 @@ let origin = Point(0, 0, 0);
 <br><br>
 
 ## 2. 구조체를 이용한 예제 프로그램
+1. *rectangles*라는 이름의 새 바이너리 프로젝트 생성
+   <details>
+   <summary>code examples</summary>
+   <div markdown="1"><br>
+   
+    ```$ cd ~/.firstrust```<br><br>
+    ```$ cargo new rectangles --bin```
+   
+   </details>
+2. src/main.rs 파일 수정하기
+   <details>
+   <summary>code</summary>
+   <div markdown="1"><br>
+   
+    ```rust
+    struct Rectangle {
+        length: u32,
+        width: u32,
+    }
+    
+    fn main() {
+        let rect1 = Rectangle { length: 50, width: 30 };
+    
+        println!(
+            "The area of the rectangle is {} square pixels.",
+            area(&rect1)
+        );
+    }
+    
+    fn area(rectangle: &Rectangle) -> u32 { 
+        rectangle.length * rectangle.width
+    }
+    ```
+    * ```struct Rectangle```: Rectangle이라는 이름의 구조체 정의
+    * ```length: u32```, ```width: u32```: 각각 필드의 타입 정의
+    * main 함수 내에서 Rectangle 구조체의 특정 인스턴스 생성
+        * ```let rect1 = Rectangle { length: 50, width: 30 };```: 길이 50, 너비 30의 직사각형 rect1
+    * ```fn area(rectangle: &Rectangle)```
+        * rectangle이라는 이름의 파라미터 하나를 가진 ```area``` 함수
+        * 해당 파라미터는 Rectangle 구조체 인스턴스의 불변 참조자 타입 ← ```&``` 사용
+    * ```{ rectangle.lenth * rectangle.width }```
+        * 해당 함수는 Rectangle 인스턴스 내의 필드에 접근하여 넓이 계산
+    </details>
+3. derived trait으로 유용한 기능 추가
+   <details>
+   <summary>디버깅 시 Rectangle 인스턴스 출력하기</summary>
+   <div markdown="1">
+
+   ```rust
+   #[derive(Debug)]
+   struct Rectangle {
+       length: u32,
+       width: u32,
+   }
+  
+   fn main() {
+       let rect1 = Rectangle { length: 50, width: 30 };
+  
+       println!("rect1 is {:?}", rect1);
+   }
+   ```
+   * ```#[derive(Debug)]``` annotation:<br>
+     러스트는 기본적으로 디버깅 정보를 출력하는 기능을 포함하지만,<br>
+     **구조체에 대해 해당 기능을 활성화하도록 명시적인 사전동의 필요**  
+
+   </details>
+
+    <br><br>
+    
+   
+   </details>   
 <br><br>
 
 ## 3. 메소드 문법
