--- a/05연관데이터구조체로다루기.md
+++ b/05연관데이터구조체로다루기.md
@@ -27,7 +27,7 @@ struct User {
 ### 구조체 인스턴스 생성
 * 구조체 정의: 들어가는 내용의 대략적인 양식
 * 인스턴스: 그것에 특정한 값을 넣어 실체화한 것
-  * 인스턴스는 반드시 ```변경 가능``` 해야
+  * 인스턴스는 반드시 ```변경 가능``` 해야 함
 <details>
 <summary>구조체 <code>User</code> 인스턴스 생성</summary>
 <div markdown="1">
@@ -80,12 +80,10 @@ fn build_user(email: String, username: String) -> User {
 * active는 ```bool``` 타입의 필드. 사용자 활성 상태를 나타내는 듯..?
   
 </details>
-<br>
 
 * ```User``` 구조체 사용해서 user1이라는 사용자를 생성
 * ```build_user``` 함수 호출하여 새로운 ```User``` 인스턴스 생성
-
-<br><br>
+<br>
 
 ### 필드 초기화 축약법*field init shorthand*
 ```rust
@@ -100,7 +98,8 @@ fn build_user(email: String, username: String) -> User {
 ```
 * 위 build_user 함수와 똑같이 동작
 * 매개변수(email, username)가 ```User``` 구조체 필드명과 동일 → 변수 명시 부분 생략 가능.
-<br><br>
+<br>
+
 ### 구조체 갱신법*struct update syntax*
 * ⬆️을 이용하여 기존 값을 기반으로 새 구조체 인스턴스 생성❗
 ```rust
@@ -120,7 +119,8 @@ let user2 = User {
     ..user1
 };
 ```
-<br><br>
+<br>
+
 ### 튜플 구조체*tuple struct*
 * 필드의 타입만 정의 가능하고 명명은 불가한 구조체 (구조체명으로 의미 부여 가능)
 * 1️⃣```struct``` 키워드 2️⃣튜플 타입 정의만 이루어지면 됨❣️
@@ -137,8 +137,8 @@ let origin = Point(0, 0, 0);
 ```
 * 구조체 내의 타입은 동일하지만 ```black```, ```origin``` 각각은 고유의 타입임
 </details>
+<br>
 
-<br><br>
 ### 유사 유닛 구조체*unit-like struct*
 * 필드가 없음
 * [유닛 타입](https://runebook.dev/ko/docs/rust/std/primitive.unit)```()```과 비슷하게 동작.
@@ -161,9 +161,55 @@ let origin = Point(0, 0, 0);
    </details>
 2. src/main.rs 파일 수정하기
    <details>
-   <summary>code</summary>
+   <summary>more</summary>
    <div markdown="1"><br>
    
+    ```rust
+    // 길이와 너비가 각각의 변수에 지정된 사각형의 넓이 계산
+    
+    fn main() {
+        let length1 = 50;
+        let width1 = 30;
+    
+        println!(
+            "The area of the rectangle is {} square pixels.",
+            area(length1, width1)
+        );
+    }
+    
+    fn area(length: u32, width: u32) -> u32 {
+        length * width
+    }
+    ```
+    * 위 코드 실행 결과<br>
+      <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/e053216c-ff32-46db-a514-f57672f645e3" width="500px">
+    <br>
+    
+    ### 튜플을 이용한 리팩터링
+    ```rust
+    // 튜플을 이용하여 사각형의 길이와 너비 명시
+    
+    fn main() {
+        let rect1 = (50, 30);    // (A, B) 형식 내에 순서대로 length, width를 표기기
+    
+        println!(
+            "The area of the rectangle is {} square pixels.",
+            area(rect1)
+        );
+    }
+    
+    fn area(dimensions: (u32, u32)) -> u32 {
+        dimensions.0 * dimensions.1
+    }
+    ```
+    * 실행 결과는 위와 같음
+    * length가 튜플 인덱스 0, width가 튜플 인덱스 1
+   
+    </details>
+    <details>
+    <summary>🤓 구조체를 이용한 리팩터링: 의미 추가</summary>
+    <div markdown="1">
+    
     ```rust
     struct Rectangle {
         length: u32,
@@ -179,7 +225,7 @@ let origin = Point(0, 0, 0);
         );
     }
     
-    fn area(rectangle: &Rectangle) -> u32 { 
+    fn area(rectangle: &Rectangle) -> u32 {
         rectangle.length * rectangle.width
     }
     ```
@@ -192,7 +238,9 @@ let origin = Point(0, 0, 0);
         * 해당 파라미터는 Rectangle 구조체 인스턴스의 불변 참조자 타입 ← ```&``` 사용
     * ```{ rectangle.lenth * rectangle.width }```
         * 해당 함수는 Rectangle 인스턴스 내의 필드에 접근하여 넓이 계산
+
     </details>
+  
 3. derived trait으로 유용한 기능 추가
    <details>
    <summary>디버깅 시 Rectangle 인스턴스 출력하기</summary>
@@ -214,13 +262,19 @@ let origin = Point(0, 0, 0);
    * ```#[derive(Debug)]``` annotation:<br>
      러스트는 기본적으로 디버깅 정보를 출력하는 기능을 포함하지만,<br>
      **구조체에 대해 해당 기능을 활성화하도록 명시적인 사전동의 필요**  
+   * 위 코드 실행 결과<br>
+     <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/c9b15f7b-5ad9-42b1-8a4e-8b1f71bd69ad" width="500px"><br>
+       * ```rect1 is Rectangle { length: 50, width: 30 }``` 출력 외에도 뭐가 되게 많이 떴음
+       * 경고문 내용: lengh, width 필드 사용 안됐으니 필드 제거하거나 쓰이게끔 하라는 뜻인듯..
+   * ```💗참고💗``` ```println!``` 스트링 내에 ```{:#?}``` 사용하게 되었을 때의 실행 결과<br><br>
+     <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/f63d4398-d5bb-4b94-bfc0-861bd938a3a4" width="400px">
+
 
    </details>
 
     <br><br>
     
-   
-   </details>   
+     
 <br><br>
 
 ## 3. 메소드 문법
