--- a/05연관데이터구조체로다루기.md
+++ b/05연관데이터구조체로다루기.md
@@ -155,8 +155,8 @@ let origin = Point(0, 0, 0);
    <summary>code examples</summary>
    <div markdown="1"><br>
    
-    ```$ cd ~/.firstrust```<br><br>
-    ```$ cargo new rectangles --bin```
+   ```$ cd ~/.firstrust```<br><br>
+   ```$ cargo new rectangles --bin```
    
    </details>
 2. src/main.rs 파일 수정하기
@@ -164,82 +164,82 @@ let origin = Point(0, 0, 0);
    <summary>more</summary>
    <div markdown="1"><br>
    
-    ```rust
-    // 길이와 너비가 각각의 변수에 지정된 사각형의 넓이 계산
-    
-    fn main() {
-        let length1 = 50;
-        let width1 = 30;
-    
-        println!(
-            "The area of the rectangle is {} square pixels.",
-            area(length1, width1)
-        );
-    }
-    
-    fn area(length: u32, width: u32) -> u32 {
-        length * width
-    }
-    ```
-    * 위 코드 실행 결과<br>
+   ```rust
+   // 길이와 너비가 각각의 변수에 지정된 사각형의 넓이 계산
+  
+   fn main() {
+       let length1 = 50;
+       let width1 = 30;
+  
+       println!(
+           "The area of the rectangle is {} square pixels.",
+           area(length1, width1)
+       );
+   }
+  
+   fn area(length: u32, width: u32) -> u32 {
+       length * width
+   }
+   ```
+   * 위 코드 실행 결과<br>
       <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/e053216c-ff32-46db-a514-f57672f645e3" width="500px">
-    <br>
+   <br>
     
-    ### 튜플을 이용한 리팩터링
-    ```rust
-    // 튜플을 이용하여 사각형의 길이와 너비 명시
+   ### 튜플을 이용한 리팩터링
+   ```rust
+   // 튜플을 이용하여 사각형의 길이와 너비 명시
     
-    fn main() {
-        let rect1 = (50, 30);    // (A, B) 형식 내에 순서대로 length, width를 표기기
+   fn main() {
+       let rect1 = (50, 30);    // (A, B) 형식 내에 순서대로 length, width를 표기기
     
-        println!(
-            "The area of the rectangle is {} square pixels.",
-            area(rect1)
-        );
-    }
+       println!(
+           "The area of the rectangle is {} square pixels.",
+           area(rect1)
+       );
+   }
     
-    fn area(dimensions: (u32, u32)) -> u32 {
-        dimensions.0 * dimensions.1
-    }
-    ```
-    * 실행 결과는 위와 같음
-    * length가 튜플 인덱스 0, width가 튜플 인덱스 1
+   fn area(dimensions: (u32, u32)) -> u32 {
+       dimensions.0 * dimensions.1
+   }
+   ```
+   * 실행 결과는 위와 같음
+   * length가 튜플 인덱스 0, width가 튜플 인덱스 1
    
-    </details>
-    <details>
-    <summary>🤓 구조체를 이용한 리팩터링: 의미 추가</summary>
-    <div markdown="1">
+   </details>
+   <details>
+   <summary>🤓 #구조체를 이용한 리팩터링: 의미 추가</summary>
+   <div markdown="1">
     
-    ```rust
-    struct Rectangle {
-        length: u32,
-        width: u32,
-    }
+   ```rust
+   struct Rectangle {
+       length: u32,
+       width: u32,
+   }
     
-    fn main() {
-        let rect1 = Rectangle { length: 50, width: 30 };
-    
-        println!(
-            "The area of the rectangle is {} square pixels.",
-            area(&rect1)
-        );
-    }
-    
-    fn area(rectangle: &Rectangle) -> u32 {
-        rectangle.length * rectangle.width
-    }
-    ```
-    * ```struct Rectangle```: Rectangle이라는 이름의 구조체 정의
-    * ```length: u32```, ```width: u32```: 각각 필드의 타입 정의
-    * main 함수 내에서 Rectangle 구조체의 특정 인스턴스 생성
-        * ```let rect1 = Rectangle { length: 50, width: 30 };```: 길이 50, 너비 30의 직사각형 rect1
-    * ```fn area(rectangle: &Rectangle)```
-        * rectangle이라는 이름의 파라미터 하나를 가진 ```area``` 함수
-        * 해당 파라미터는 Rectangle 구조체 인스턴스의 불변 참조자 타입 ← ```&``` 사용
-    * ```{ rectangle.lenth * rectangle.width }```
-        * 해당 함수는 Rectangle 인스턴스 내의 필드에 접근하여 넓이 계산
+   fn main() {
+       let rect1 = Rectangle { length: 50, width: 30 };
+   
+       println!(
+           "The area of the rectangle is {} square pixels.",
+           area(&rect1)
+       );
+   }
+   
+   fn area(rectangle: &Rectangle) -> u32 {
+       rectangle.length * rectangle.width
+   }
+   ```
+   * ```struct Rectangle```: Rectangle이라는 이름의 구조체 정의
+   * ```length: u32```, ```width: u32```: 각각 필드의 타입 정의
+   * main 함수 내에서 Rectangle 구조체의 특정 인스턴스 생성
+       * ```let rect1 = Rectangle { length: 50, width: 30 };```: 길이 50, 너비 30의 직사각형 rect1
+   * ```fn area(rectangle: &Rectangle)```
+       * rectangle이라는 이름의 파라미터 하나를 가진 ```area``` 함수
+       * 해당 파라미터는 Rectangle 구조체 인스턴스의 불변 참조자 타입 ← ```&``` 사용
+   * ```{ rectangle.lenth * rectangle.width }```
+       * 해당 함수는 Rectangle 인스턴스 내의 필드에 접근하여 넓이 계산
 
-    </details>
+   </details>
   
 3. derived trait으로 유용한 기능 추가
    <details>
@@ -270,11 +270,74 @@ let origin = Point(0, 0, 0);
      <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/f63d4398-d5bb-4b94-bfc0-861bd938a3a4" width="400px">
 
 
-   </details>
-
-    <br><br>
-    
-     
+   </details>    
 <br><br>
 
 ## 3. 메소드 문법
+~~위 Rectangle과 이어지는 내용.~~
+함수와 유사한 method
+* ```fn``` 키워드와 이름으로 선언
+* 매개변수와 반환값 소유
+* 호출되었을 때 실행될 코드 내포
+* 구조체 내용 안에서 정의됨 (함수와의 차이)
+* 첫 번째 파라미터가 항상 ```self```임 → 메소드 호출되는 구조체의 인스턴스 의미
+### 메소드 정의하기
+기존 함수를 바꿔 ```Rectangle``` 구조체 상에 ```arena``` 메소드 정의하기
+```rust
+#[derive(Debug)]
+struct Rectangle {
+    length: u32,
+    width: u32,
+}
+
+impl Rectangle {
+    fn area(&self) -> u32 {
+        self.length * self.width
+    }
+}
+
+fn main() {
+    let rect1 = Rectangle { length: 50, width: 30 };
+
+    println!(
+        "The area of the rectangle is {} square pixels.",
+        rect1.area()
+    );
+}
+```
+* ```Rectangle``` 내용 안에 함수 정의하기 위해 ```impl``` 블록 시작
+* 메소드 문법*method syntax*
+    * 인스턴스 다음에 위치
+    * ```.``` 추가, 이후 메소드 이름, 괄호, 인자 순
+* 함수 버전의 ```&Rectangle```과 같은 이유로 ```&self``` 선택
+* 메소드는 ```self```의 소유권을 허용, 불용, 빌림 가능
+* 메소드 사용 이유: 코드 조직화
+    * 우리 코드를 향후 사용하는 사람들이 ```Rectangle``` 사용 지점을 찾는 것보다 ```impl``` 블록 내에서 인스턴스로 할 수 있는 것을 모음
+<br><br>
+* 어떤 메소드를 호출했을 때, 러스트는 자동적으로 ```&``` 또는 ```&mut``` 또는 ```*```을 붙여 해당 메소드의 시그니처와 맞도록 함
+    * 동일한 표현의 두 코드 예시<br>
+      ```p1.distance(&p2);```와 ```(&p1).distance(&p2);```
+<br>
+
+### 더 많은 파라미터를 가진 메소드
+미작성한 ```can_hold``` 메소드 이용하는 데모
+* ```Rectangle``` 인스턴스에서 하나의 인스턴스가 다른 인스턴스를 가져와
+```rust
+fn main() {
+    let rect1 = Rectangle { length: 50, width: 30 };
+    let rect2 = Rectangle { length: 40, width: 10 };
+    let rect3 = Rectangle { length: 45, width: 60 };
+
+    println!("Can rect1 hold rect2? {}", rect1.can_hold(&rect2));
+    println!("Can rect1 hold rect3? {}", rect1.can_hold(&rect3));
+}
+```
+<details>
+<summary>기대 출력</summary>
+<div markdown="1">
+
+<pre>
+Can rect1 hold rect2? true
+Can rect1 hold rect3? false
+</pre>
+</details>
