--- a/05연관데이터구조체로다루기.md
+++ b/05연관데이터구조체로다루기.md
@@ -155,7 +155,7 @@ let origin = Point(0, 0, 0);
    <summary>code examples</summary>
    <div markdown="1"><br>
    
-   ```$ cd ~/.firstrust```<br><br>
+   ```$ cd ~/firstrust```<br><br>
    ```$ cargo new rectangles --bin```
    
    </details>
