--- a/05연관데이터구조체로다루기.md
+++ b/05연관데이터구조체로다루기.md
@@ -207,7 +207,7 @@ let origin = Point(0, 0, 0);
    
    </details>
    <details>
-   <summary>🤓 #구조체를 이용한 리팩터링: 의미 추가</summary>
+   <summary>🤓 구조체를 이용한 리팩터링: 의미 추가</summary>
    <div markdown="1">
     
    ```rust
