--- a/05연관데이터구조체로다루기.md
+++ b/05연관데이터구조체로다루기.md
@@ -321,7 +321,7 @@ fn main() {
 
 ### 더 많은 파라미터를 가진 메소드
 미작성한 ```can_hold``` 메소드 이용하는 데모
-* ```Rectangle``` 인스턴스에서 하나의 인스턴스가 다른 인스턴스를 가져와
+* ```Rectangle``` 인스턴스에서 하나의 인스턴스가 다른 인스턴스를 가져와 ```self``` 내에 완전히 들어갈 수 있으면 ```true```를, 아니라면 ```false``` 반환하고자 함
 ```rust
 fn main() {
     let rect1 = Rectangle { length: 50, width: 30 };
@@ -341,3 +341,38 @@ Can rect1 hold rect2? true
 Can rect1 hold rect3? false
 </pre>
 </details>
+또한 보완되어야할 부분
+
+```rust
+impl Rectangle {
+    fn area(&self) -> u32 {
+        self.length * self.width
+    }
+
+    fn can_hold(&self, other: &Rectangle) -> bool {
+        self.length > other.length && self.width > other.width
+    }
+}
+```
+<br>
+위 데모를 포함하여 기존 코드 보완
+
+![image](https://github.com/redzzzi/Rust23summer/assets/127263392/af49be2a-bab7-446b-a61c-8b9685a8f5f9)<br>
+실행 결과<br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/f3a2cb38-ff8a-44f1-a10a-732d0f5a0181" width="400px">
+<br><br>
+
+### ```impl``` 블록의 유용한 기능: 연관함수 ```impl``` 내 정의 허용
+* **연관 함수***associated functions* → ```self``` 파라미터 갖지 않는 함수
+* 연관 함수는 새로운 구조체의 인스턴스를 반환해주는 생성자로서 자주 사용됨
+* 정사각형 ```Rectangle``` 생성하는 경우 효율적
+
+```rust
+impl Rectangle {
+    fn square(size: u32) -> Rectangle {
+        Rectangle { length: size, width: size }
+    }
+}
+```
+
+
