--- a/06열거형과패턴매칭.md
+++ b/06열거형과패턴매칭.md
@@ -3,7 +3,208 @@
 <br><br>
 
 ## 1. 열거형 정의하기
+열거형의 variants
+```rust
+enum IpAddrKind {
+    V4,
+    V6,
+}
+```
+* 나열 *enumerate* == 열거
 <br><br>
+
+### 열거형 값
+```IpAddrKind```의 variants에 대한 인스턴스 생성
+```rust
+let four = IpAddrKind::V4;
+let six = IpAddrKind::V6;
+```
+<br>
+
+```IpAddrKind``` 타입을 인자로 받는 함수 정의
+```rust
+fn route(ip_type: IpAddrKind) { }
+```
+<br>
+
+variant 중 하나를 사용해 함수 호출
+```rust
+route(IpAddrKind::V4);
+route(IpAddrKind::V6);
+```
+<br>
+<details>
+<summary>구조체로 해결</summary>
+<div markdown="1">
+  
+```rust
+enum IpAddrKind {
+    V4,
+    V6,
+}
+
+struct IpAddr {
+    kind: IpAddrKind,
+    address: String,
+}
+
+let home = IpAddr {
+    kind: IpAddrKind::V4,
+    address: String::from("127.0.0.1"),
+};
+
+let loopback = IpAddr {
+    kind: IpAddrKind::V6,
+    address: String::from("::1"),
+};
+```
+* 두 개의 필드(kind, address)를 갖는 ```IPAddr``` 정의
+</details>
+<details>
+<summary>열거형으로 해결</summary>
+<div markdown="1">
+
+```rust
+enum IpAddr {
+    V4(String),
+    V6(String),
+}
+
+let home = IpAddr::V4(String::from("127.0.0.1"));
+
+let loopback = IpAddr::V6(String::from("::1"));
+```
+* 열거형 variant에 직접 데이터 붙임
+* 또한 ```V4``` 주소에는 4개의 ```u8``` 값을 저장하고, ```V6``` 주소에는 하나의 ```String``` 값으로 표현하는 것 가능❗ (구조체는 불가)
+  ```rust
+  enum IpAddr {
+    V4(u8, u8, u8, u8),
+    V6(String),
+  }
+
+  let home = IpAddr::V4(127, 0, 0, 1);
+  
+  let loopback = IpAddr::V6(String::from("::1"));
+  ```
+
+</details>
+<br>
+
+[IP 주소 관련 표준 라이브러리 정의](https://doc.rust-lang.org/std/net/enum.IpAddr.html)
+```rust
+struct Ipv4Addr {
+    // details elided
+}
+
+struct Ipv6Addr {
+    // details elided
+}
+
+enum IpAddr {
+    V4(Ipv4Addr),
+    V6(Ipv6Addr),
+}
+```
+<br>
+<details>
+<summary>열거형의 다른 예제</summary>
+<div markdown="1">
+
+```rust
+enum Message {
+    Quit,
+    Move { x: i32, y: i32 },
+    Write(String),
+    ChangeColor(i32, i32, i32),
+}
+```
+* 다른 데이터 타입을 갖는 네 개의 variants
+    * ```Quit```: 연관 데이터 ❌
+    * ```Move```: 익명 구조체 포함
+    * ```Write```: 하나의 ```String``` 포함
+    * ```ChangeColor```: 세 개의 ```i32``` 포함
+* ```struct``` 키워드 미사용
+* 모든 variants가 ```Message``` 타입으로 그룹화
+<br>
+위와 동일한 variants의 데이터를 포함하는 코드
+
+```rust
+struct QuitMessage; // 유닛 구조체
+struct MoveMessage {
+    x: i32,
+    y: i32,
+}
+struct WriteMessage(String); // 튜플 구조체
+struct ChangeColorMessage(i32, i32, i32); // 튜플 구조체
+```
+* 메시지 중 어떤 한 가지를 인자로 받는 함수 정의 가능 (∵ ```Message``` 열거형은 하나의 타입)
+
+</details>
+<br>
+
+### 메소드 정의가 가능한 열거형
+```rust
+impl Message {
+    fn call(&self) {
+        // 메소드 내용은 여기 정의할 수 있습니다.
+    }
+}
+
+let m = Message::Write(String::from("hello"));
+m.call();
+```
+* 열거형 값 가져오기 위해 메소드 내에서 ```self``` 사용
+* ```m.call()``` 실행 ➡️ ```m```의 값이 ```Message::Write(String::from("hello"))```에서 ```call``` 메소드 내에서 ```self```가 됨.
+<br>
+
+### Options 열거형 그리고 이것이 Null값보다 좋은 점 
+* ```Option``` 타입은 *값이 있거나 없을 수도 있는* 아주 흔한 상황을 나타내기 때문에, 타입 시스템의 관점에서 **컴파일러가 발생할 수 있는 모든 경우를 처리했는지** 체크할 수 있음❗
+* 러스트에는 null 특성이 없음
+<br>
+
+[Option<T> 표준 라이브러리 정의](https://doc.rust-lang.org/std/option/enum.Option.html)
+```rust
+enum Option<T> {
+    Some(T),
+    None,
+}
+```
+* ```Option<T>``` 열거형은 기본적으로 포함됨 → 명시 안하고도 바로 사용 가능
+    * ```Option::```을 앞에 붙이지 않고 ```Some```과 ```None```의 variants 사용
+<br>
+
+**\<T>의 기능**
+* ```Option``` 열거형의 ```Some``` variants가 어떤 타입의 데이터라도 가질 수 있게 함
+* 러스트 문법
+* 제너릭 타입 파라미터
+<details>
+<summary>숫자 타입과 문자열 타입 갖는 <code>Option</code>값에 대한 예</summary>
+<div markdown="1">
+
+```rust
+let some_number = Some(5);
+let some_string = Some("a string");
+
+let absent_number: Option<i32> = None;
+```
+* ```Some``` 값 얻게 되면, 1️⃣ 값이 있음 2️⃣ ```Some```이 갖고 있는 값에 대해 알 수 있음
+* ```None```은 null의 의미를 가지게 되어 유효하지 않음
+</details>
+<br>
+
+#### 그래서 이게 null인 것보다 좋은 이유
+```rust
+let x: i8 = 5;
+let y: Option<i8> = Some(5);
+
+let sum = x + y;
+```
+* ```Option<T>```와 ```<T>```(🍅)는 다른 타입임
+* 컴파일러에서 위의 ```Option<i8>```처럼 유효하게 사용하지 못하게 함
+* 위 코드에서는 에러가 뜨지만, **러스트에서 ```i8```과같은 타입의 값을 가질 때 null인지 확인할 필요 없이 사용 가능**
+* 위같은 경우에서는 값의 존재 여부에 대해 생각해봐야함
+* ```T``` 대한 연산 수행 전 ```Option<T>```를 ```T```로 변환해야 함
+* null일 수 있는 값을 사용하기 위해 명시적으로 값의 타입을 ```Option<T>```로 만들기
 
 ## 2. match 흐름 제어 연산자
 <br><br>
