--- a/06열거형과패턴매칭.md
+++ b/06열거형과패턴매칭.md
@@ -190,7 +190,6 @@ let absent_number: Option<i32> = None;
 * ```Some``` 값 얻게 되면, 1️⃣ 값이 있음 2️⃣ ```Some```이 갖고 있는 값에 대해 알 수 있음
 * ```None```은 null의 의미를 가지게 되어 유효하지 않음
 </details>
-<br>
 
 #### 그래서 이게 null인 것보다 좋은 이유
 ```rust
@@ -199,12 +198,13 @@ let y: Option<i8> = Some(5);
 
 let sum = x + y;
 ```
-* ```Option<T>```와 ```<T>```(🍅)는 다른 타입임
+* ```Option<T>```와 ```<T>```(🍅어떤 타입이든 될 수 있음)는 다른 타입임
 * 컴파일러에서 위의 ```Option<i8>```처럼 유효하게 사용하지 못하게 함
 * 위 코드에서는 에러가 뜨지만, **러스트에서 ```i8```과같은 타입의 값을 가질 때 null인지 확인할 필요 없이 사용 가능**
 * 위같은 경우에서는 값의 존재 여부에 대해 생각해봐야함
 * ```T``` 대한 연산 수행 전 ```Option<T>```를 ```T```로 변환해야 함
 * null일 수 있는 값을 사용하기 위해 명시적으로 값의 타입을 ```Option<T>```로 만들기
+<br>
 
 ## 2. match 흐름 제어 연산자
 <br><br>
