--- a/06열거형과패턴매칭.md
+++ b/06열거형과패턴매칭.md
@@ -207,6 +207,68 @@ let sum = x + y;
 <br>
 
 ## 2. match 흐름 제어 연산자
+
+### ```match```
+* 강력한 흐름 제어 연산자
+* 일련의 패턴에 대해, 어떤 값을 비교하고 어떤 패턴에 매치되었는지를 바탕으로 코드 수행 도움
+* 패턴을 구성하는 것에는 리터럴 값, 변수명, 와일드 카드 등이 있음
+  <details>
+  <summary>자세히</summary>
+  <div markdown="1">
+
+  ```코드 출처: chatGPT```
+  1. 리터럴 값: 특정한 값 자체
+     * 숫자, 문자열, 불리언 값, etc.
+     ```rust
+     let number = 42;
+     match number {
+         0 => println!("The number is zero"),
+         1 => println!("The number is one"),
+     }
+     ```
+  2. 변수명
+     * 패턴 매칭 시 값을 바인딩 하는 데 사용됨.
+     * 매칭하는 값이 해당 변수에 할당됨. → 값 추출, 활용
+     ```rust
+     let point = (3, 4);
+     match point {
+         (x, y) => println!("The point is at coordinates: ({}, {})", x, y),
+     }
+     ```
+  3. 와일드카드: 어떤 값에도 매치되는 특별한 패턴.
+     * ```_``` 기호로 표시.
+     * 특정 값에 관심이 없거나 사용하지 않을 때 유용함b.
+     ```rust
+     let number = 42;
+     match number {
+         _ => println!("I don't care about the value"),
+     }
+     ```
+  </details>
+<br>
+
+### coin 예제
+미국 동전을 입력받아, 어떤 동전인지와 센트로 반환하기
+```rust
+enum Coin {
+    Penny,
+    Nickel,
+    Dime,
+    Quarter,
+}
+
+fn value_in_cents(coin: Coin) -> u32 {
+    match coin {
+        Coin::Penny => 1,
+        Coin::Nickel => 5,
+        Coin::Dime => 10,
+        Coin::Quarter => 25,
+    }
+}
+```
+* 열거형과 열거형 variant를 패턴으로 사용하는 ```match``` 표현식임
+* 
+
 <br><br>
 
 ## 3. if let을 사용한 간결한 흐름 제어
