--- a/06열거형과패턴매칭.md
+++ b/06열거형과패턴매칭.md
@@ -247,7 +247,7 @@ let sum = x + y;
   </details>
 <br>
 
-### coin 예제
+### 🪙동전🪙 예제
 미국 동전을 입력받아, 어떤 동전인지와 센트로 반환하기
 ```rust
 enum Coin {
@@ -267,7 +267,89 @@ fn value_in_cents(coin: Coin) -> u32 {
 }
 ```
 * 열거형과 열거형 variant를 패턴으로 사용하는 ```match``` 표현식임
-* 
+* ```match``` 키워드 뒤 ```coin``` 타입은 ```Coin``` 열거형임
+* ```match```의 갈래들
+    * 하나의 갈래 = ```패턴``` + ```코드```
+    * 각 갈래는 그 다음 갈래와 쉼표로 구분
+    * ```Coin::Penny => 1,```에서,<br>
+      ```Coin::Penny```의 패턴을 가지며 ```=>``` 연산자를 기준으로 실행되는 코드(값 ```1```)를 알 수 있음.
+    * ```=>```: 패턴과 실행되는 코드를 구분해주는 연산자
+* ```match``` 표현식 실행 시, 결과값을 각 갈래의 패턴과 순차 비교.<br>
+  🤓 **어떤 패턴이 그 값이랑 매치된다** ➡️ 그 패턴과 연관된 코드 실행<br>
+  🤓 **매치되지 않는다** ➡️ 다음 갈래로 계속 실행
+* 실행하고자 하는 코드가 여러 줄이라면 중괄호 사용.<br>
+  예시
+  ```rust
+  fn value_in_cents(coin: Coin) -> u32 {
+      match coin {
+          Coin::Penny => { // <- 중괄호 시작
+              println!("Lucky penny!");
+              1
+          },  // <- 중괄호 끝끝
+          Coin::Nickel => 5,
+          Coin::Dime => 10,
+          Coin::Quarter => 25,
+      }
+  }
+  ```
+<br>
+
+### 값들을 바인딩하는 패턴
+* 매치 갈래의 기능 ➕: 패턴과 매치된 값들의 부분 바인딩(변수에 값 할당하기) 가능
+<br>
+
+*1999~2008년, 미국은 각 50개 주마다 한쪽 면의 디자인이 다른 **쿼터 동전** 주조*<br>
+
+➡️ ```Quarter``` variant 내에 ```UsState``` 값을 포함하도록 열거형```enum``` 변경함으로써 추가할 수 있음❗
+
+```rust
+#[derive(Debug)] // So we can inspect the state in a minute
+enum UsState {
+    Alabama,
+    Alaska,
+    // ... etc
+}
+
+enum Coin {
+    Penny,
+    Nickel,
+    Dime,
+    Quarter(UsState),
+}
+```
+
+* 위에서 언급된 바와 같이, ```Coin``` 열거형에서 ```Quarter``` variant가 ```UsState```값 또한 들고 있음
+<br>
+
+쿼터 동전마다 주 이름을 출력하려면? ➡️ ```state``` 변수 추가해주면 됨<br>
+
+아래 코드를 위 코드에 추가
+```rust
+fn value_in_cents(coin: Coin) -> u32 {
+    match coin {
+        Coin::Penny => 1,
+        Coin::Nickel => 5,
+        Coin::Dime => 10,
+        Coin::Quarter(state) => {
+            println!("State quarter from {:?}!", state);
+            25
+        },
+    }
+}
+```
+* ```value_in_cents(Coin::Quarter(UsState::Alaska))```을 호출했을 때, ```coin```은 ```Coin::Quarter(UsState::Alaska)```에 해당.
+* 각각의 매치 갈래와 해당 값을 비교하여 ```Coin::Quarter(state)```에 도달할 때까지 매치 ❌
+* ```state```에 대한 바인딩 값 == ```UsState::Alaska```<br>
+  ➡️ 해당 바인딩을 ```println!``` 표현식 내 사용 가능<br>
+  ➡️ ```Quarter```에 대한 ```Coin``` 열거형 variant로부터 내부 주에 대한 값을 얻을 수 있음 ❣️❣️❣️❣️
+
+### Option<T>를 이용하는 매칭
+<br>
+
+### 다른 측면에서의 ```match```
+<br>
+
+### _ 변경자(placeholder)
 
 <br><br>
 
