--- a/06열거형과패턴매칭.md
+++ b/06열거형과패턴매칭.md
@@ -198,8 +198,19 @@ let y: Option<i8> = Some(5);
 
 let sum = x + y;
 ```
+에러 메시지
+<pre>
+error[E0277]: the trait bound `i8: std::ops::Add<std::option::Option<i8>>` is
+not satisfied
+ -->
+  |
+7 | let sum = x + y;
+  |           ^^^^^
+  |
+</pre>
+* 일단 위 코드는 ```Option<i8>```에 ```i8```을 더하려고 해서 컴파일 되지 않음<br>
+  ➡️ 컴파일러에서 위의 ```Option<i8>```처럼 유효하게 사용하지 못하게 함
 * ```Option<T>```와 ```<T>```(🍅어떤 타입이든 될 수 있음)는 다른 타입임
-* 컴파일러에서 위의 ```Option<i8>```처럼 유효하게 사용하지 못하게 함
 * 위 코드에서는 에러가 뜨지만, **러스트에서 ```i8```과같은 타입의 값을 가질 때 null인지 확인할 필요 없이 사용 가능**
 * 위같은 경우에서는 값의 존재 여부에 대해 생각해봐야함
 * ```T``` 대한 연산 수행 전 ```Option<T>```를 ```T```로 변환해야 함
