--- a/06열거형과패턴매칭.md
+++ b/06열거형과패턴매칭.md
@@ -176,7 +176,7 @@ enum Option<T> {
 **\<T>의 기능**
 * ```Option``` 열거형의 ```Some``` variants가 어떤 타입의 데이터라도 가질 수 있게 함
 * 러스트 문법
-* 제너릭 타입 파라미터
+* [제너릭 타입](https://rinthel.github.io/rust-lang-book-ko/ch10-01-syntax.html) 파라미터
 <details>
 <summary>숫자 타입과 문자열 타입 갖는 <code>Option</code>값에 대한 예</summary>
 <div markdown="1">
@@ -355,6 +355,50 @@ fn value_in_cents(coin: Coin) -> u32 {
   ➡️ ```Quarter```에 대한 ```Coin``` 열거형 variant로부터 내부 주에 대한 값을 얻을 수 있음 ❣️❣️❣️❣️
 
 ### Option<T>를 이용하는 매칭
+```Option<T>```를 사용할 때 ```Some``` 케이스로부터 내부의 ```T``` 값을 얻을 필요가 있었음.<br>
+그런데 위 열거형과 같이 ```match```를 이용하여 ```Option<T>```를 다룰 수 있음.
+<br>
+
+**```Option<i32>```를 파라미터로 받아서 내부에 값이 있으면 그 값에 1을 더하고, 없으면 ```None``` 값을 반환하는 함수의 코드를 짜보자!**
+```rust
+fn plus_one(x: Option<i32>) -> Option<i32> {
+    match x {
+        None => None,
+        Some(i) => Some(i + 1),
+    }
+}
+
+let five = Some(5);
+let six = plus_one(five);
+let none = plus_one(None);
+```
+<details>
+<summary>출력문 추가한 코드</summary>
+<div markdown="1">
+    
+```rust
+fn plus_one(x: Option<i32>) -> Option<i32> {
+    match x {
+        None => None,
+        Some(i) => Some(i + 1),
+    }
+}
+
+fn main() {
+    let five = Some(5);
+    let six = plus_one(five);
+    let none = plus_one(None);
+
+    println!("five: {:?}", five);  // added
+    println!("six: {:?}", six);  // added
+    println!("none: {:?}", none);  // added
+}
+```
+</details>
+
+#### Some(T) 매칭 하기
+* ```plus_one(five)``` 호출될 때, 
+
 <br>
 
 ### 다른 측면에서의 ```match```
