--- a/06열거형과패턴매칭.md
+++ b/06열거형과패턴매칭.md
@@ -397,7 +397,19 @@ fn main() {
 </details>
 
 #### Some(T) 매칭 하기
-* ```plus_one(five)``` 호출될 때, 
+* ```plus_one(five)``` 호출될 때, ```plus_one``` 본체 내의 ```x```는 ```Some(5)```를 가지게 됨.<br>
+  이후 순서대로, 각각 매치 갈래와 이 값을 비교함.
+  ```rust
+  None => None,
+  ```
+  ➡️ 딱 봐도 아니니까 넘어가.
+  ```rust
+  Some(i) => Some(i + 1),
+  ```
+  ➡️ ```Some(5)```랑 ```Some(i)```랑 생긴 게 비슷함 (== 동일한 variant를 가지고 있음)❗<br>
+  ➡️ ```Some``` 내부의 값이 ```i```에 바인드 되므로 ```i```는 값 ```5```를 가짐.<br>
+  🤓 그 다음에 매치 갈래 내 코드```Some(i + 1)``` 실행됨
+  💗 최종적으로 ```i```에 6이 담긴 새로운 ```Some``` 값이 생성됨❗❗
 
 <br>
 
