--- a/06열거형과패턴매칭.md
+++ b/06열거형과패턴매칭.md
@@ -402,13 +402,13 @@ fn main() {
   ```rust
   None => None,
   ```
-  ➡️ 딱 봐도 아니니까 넘어가.
+  ➡️ 딱 봐도 아니니까 넘어가.<br><br>
   ```rust
   Some(i) => Some(i + 1),
   ```
   ➡️ ```Some(5)```랑 ```Some(i)```랑 생긴 게 비슷함 (== 동일한 variant를 가지고 있음)❗<br>
   ➡️ ```Some``` 내부의 값이 ```i```에 바인드 되므로 ```i```는 값 ```5```를 가짐.<br>
-  🤓 그 다음에 매치 갈래 내 코드```Some(i + 1)``` 실행됨
+  🤓 그 다음에 매치 갈래 내 코드```Some(i + 1)``` 실행됨<br><br>
   💗 최종적으로 ```i```에 6이 담긴 새로운 ```Some``` 값이 생성됨❗❗
 
 <br>
