--- a/06열거형과패턴매칭.md
+++ b/06열거형과패턴매칭.md
@@ -413,11 +413,54 @@ fn main() {
 
 <br>
 
-### 다른 측면에서의 ```match```
+#### None 매칭 하기
+* ```x```가 ```None```일 때의 ```plus_one``` 호출해보기
+* ```match``` 안으로 들어와 순서대로 비교할 것임
+  ```rust
+  None => None,
+  ```
+  ➡️ 근데? None이랑 매치가 됨.<br>
+  ➡️ 더할 거 없으니까 프로그램 멈추고 코드 내용 ```None```값 반환<br><br>
+  ➕ 매칭되었으니 다른 거랑 비교할 필요 ❌
+
+<br>
+
+### ```match```관점 확장
+🐛버그🐞나는 코드
+```rust
+fn plus_one(x: Option<i32>) -> Option<i32> {
+    match x {
+        Some(i) => Some(i + 1),
+    }
+}
+```
+* ```None``` 케이스를 다루지 않았기 때문임.
+* 편집기부터 엄청난 코멘트를 볼 수 있음 ❗❗ 정말 친절함 ^^b<br>
+  lvim의 특성인진 모르겠으나...<br>
+  <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/31e1297a-01c0-4ff1-adec-64604cfbc955" width="500px"><br><br>
+  리눅스에서도...<br>
+  <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/d08df388-a80c-401d-b9ac-031567a66fd9" width="500px"><br><br>
+  🤓 모든 방면에서 ```None``` 케이스를 다루라고 알려주고 있다 ❗<br><br>
+* 특히 ```Option<T>```의 경우, Null일지도 모를 값을 가지고 있음을 가정하여 실수를 방지해줌
+
 <br>
 
 ### _ 변경자(placeholder)
-
+모든 가능한 값을 나열하고 싶지 않은 경우에 사용.<br><br>
+```rust
+let some_u8_value = 0u8;
+match some_u8_value {
+    1 => println!("one"),
+    3 => println!("three"),
+    5 => println!("five"),
+    7 => println!("seven"),
+    _ => (),
+}
+```
+* 1, 3, 5, 7에 대해서만 좀 특별하게 코드 짜고 나머지는 딱히 뭐 안하고 싶을 때.
+* ```_``` 패턴은 이전에 명시되지 않은 어떠한 값과도 다 매칭됨.
+* ```()```는 유닛 값으로, ```_``` 케이스에서 어떤 일도 발생 ❌
+* 위 코드를 어떻게 잘 수정해서 출력되는 코드로 만든다쳐도, 0은 ```_``` 패턴과 매칭되어 아무 일도 일어나지 않을 것임. ~~아마도..?~~
 <br><br>
 
 ## 3. if let을 사용한 간결한 흐름 제어
