--- a/06열거형과패턴매칭.md
+++ b/06열거형과패턴매칭.md
@@ -464,3 +464,7 @@ match some_u8_value {
 <br><br>
 
 ## 3. if let을 사용한 간결한 흐름 제어
+### ```if let``` 문법
+: ```if```와 ```let``` 조합. 하나의 패턴만 매칭시키고 나머지 경우는 무시하는 값을 다루는 방법 ❗
+<br>
+#### ```Option<u8>``` 값을 매칭하면서도 값이 3일 때만 코드를 실행하는 프로그램
