--- a/06열거형과패턴매칭.md
+++ b/06열거형과패턴매칭.md
@@ -468,3 +468,45 @@ match some_u8_value {
 : ```if```와 ```let``` 조합. 하나의 패턴만 매칭시키고 나머지 경우는 무시하는 값을 다루는 방법 ❗
 <br>
 #### ```Option<u8>``` 값을 매칭하면서도 값이 3일 때만 코드를 실행하는 프로그램
+<br>
+
+```rust
+let some_u8_value = Some(0u8);
+match some_u8_value {
+    Some(3) => println!("three"),
+    _ => (),
+}
+```
+
+* ```match``` 표현식에서 타 ```Some<u8>``` 값 또는 ```None``` 값인 경우를 아우르기 위해 ```_ => ()```를 사용하지만,<br>
+  [**보일러 플레이트 코드**](https://en.wikipedia.org/wiki/Boilerplate_code) 추가됨<br><br>
+  ➡️ 패턴 매칭을 하려는 경우마다 동일한 빈 블록을 추가해야하는 번거로움
+  <details>
+  <summary>Boilerplate code meaning on <i>wikipedia</i></summary>
+  <div markdown="1">
+
+  <pre>
+  Boilerplate code meaning on <i>wikipedia</i><br>
+      <i>In computer programming,<br>
+          boilerplate code, or simply boilerplate, are sections of code<br>
+          <b>that are repeated in multiple places with little to no variation.</b></i>
+  </pre>
+  </details>
+
+#### 하지만 ```if let``` 문법을 쓴다면?
+위와 동일하게 동작하는 코드
+
+```rust
+if let Some(3) = some_u8_value {  // ← 위 코드의 match 첫 번째 갈래와 동일
+    println!("three");
+}
+```
+* 정말 간단함 ^^b
+* ```=```로 구분된 패턴과 표현식 입력받음
+* 단점: ```match```에서 진행됐던 전수 조사를 받을 수 없음 (틀린 부분 하나하나 알려주는 거)
+* ```if let```은, 특정 패턴 매칭 케이스 제외 다른 값들에 대해 무시하는 ```match``` 문을 위한 문법적 설탕*syntax sugar*[^id]라고 생각할 수 있음 ㅎ
+
+
+
+
+[^id]: 코드를 더 직관적으로 만드는 문법적 단축 표현. 언어의 구문을 단순화하거나 표현력을 향상시키는 역할을 함.
