--- a/06열거형과패턴매칭.md
+++ b/06열거형과패턴매칭.md
@@ -258,7 +258,7 @@ not satisfied
   </details>
 <br>
 
-### 🪙동전🪙 예제
+### 🪙동전 예제🪙
 미국 동전을 입력받아, 어떤 동전인지와 센트로 반환하기
 ```rust
 enum Coin {
@@ -277,6 +277,54 @@ fn value_in_cents(coin: Coin) -> u32 {
     }
 }
 ```
+
+<details>
+<summary>➕chatGPT가 만들어준 코드➕</summary>
+<div markdown="1">
+
+```rust
+enum Coin {
+    Penny,
+    Nickel,
+    Dime,
+    Quarter,
+}
+
+fn identify_coin_and_return_value(coin: Coin) -> Option<u32> {
+    match coin {
+        Coin::Penny => Some(1),
+        Coin::Nickel => Some(5),
+        Coin::Dime => Some(10),
+        Coin::Quarter => Some(25),
+    }
+}
+
+fn main() {
+    let penny = Coin::Penny;
+    let nickel = Coin::Nickel;
+    let dime = Coin::Dime;
+    let quarter = Coin::Quarter;
+
+    if let Some(value) = identify_coin_and_return_value(penny) {
+        println!("This is a penny worth {} cents.", value);
+    }
+    if let Some(value) = identify_coin_and_return_value(nickel) {
+        println!("This is a nickel worth {} cents.", value);
+    }
+    if let Some(value) = identify_coin_and_return_value(dime) {
+        println!("This is a dime worth {} cents.", value);
+    }
+    if let Some(value) = identify_coin_and_return_value(quarter) {
+        println!("This is a quarter worth {} cents.", value);
+    }
+}
+```
+<br>
+출력문<br>
+<img src = "https://github.com/redzzzi/Rust23summer/assets/127263392/75597c97-4646-42d3-94e9-9d6e72542732" width="400px">
+
+</details>
+
 * 열거형과 열거형 variant를 패턴으로 사용하는 ```match``` 표현식임
 * ```match``` 키워드 뒤 ```coin``` 타입은 ```Coin``` 열거형임
 * ```match```의 갈래들
