--- a/07모듈.md
+++ b/07모듈.md
@@ -3,9 +3,15 @@
 <br><br>
 
 ## 1. mod와 파일 시스템
+자! 일단 새 바이너리 만드는 방법인 ```cargo new XXX --bin``` 명령어는 익숙함.<br>
+이번엔 바이너리 크레이트를 만들지 않고 **라이브러리 크레이트[^id]**를 만든다고 함❗
 <br><br>
 
 ## 2. pub으로 가시성 제어하기
 <br><br>
 
 ## 3. use로 이름 가져오기
+
+
+
+[^id]: 다른 사람들이 자신들의 프로젝트에 dependency로 추가할 수 있는 프로젝트.
