--- a/07모듈.md
+++ b/07모듈.md
@@ -4,7 +4,7 @@
 
 ## 1. mod와 파일 시스템
 자! 일단 새 바이너리 만드는 방법인 ```cargo new XXX --bin``` 명령어는 익숙함.<br>
-이번엔 바이너리 크레이트를 만들지 않고 **라이브러리 크레이트[^id]**를 만든다고 함❗
+이번엔 바이너리 크레이트를 만들지 않고 **라이브러리 크레이트**[^id]를 만든다고 함❗
 <br><br>
 
 ## 2. pub으로 가시성 제어하기
